Fix logo alignment.

--- a/css/theme.css
+++ b/css/theme.css
@@ -82,6 +82,7 @@ p {
 }
 
 .section-top {
+  /*background-image: linear-gradient(to bottom right, var(--color-brown-offwhite), #fff);*/
   /*background-color: var(--color-brown-lighter);*/
 }
 
@@ -95,6 +96,7 @@ p {
 }
 
 .section-prof {
+  /*background-image: linear-gradient(to bottom right, var(--color-brown-offwhite), #fff);*/
   /*background-color: var(--color-brown-medium);*/
 }
 
@@ -103,6 +105,7 @@ p {
 }
 
 .section-dev {
+  /*background-image: linear-gradient(to bottom right, var(--color-brown-offwhite), #fff);*/
   /*background-color: var(--color-brown-lightest);*/
 }
 
@@ -117,11 +120,16 @@ p {
 }
 
 .section-write {
+  /*background-image: linear-gradient(to bottom right, var(--color-brown-offwhite), #fff);*/
   /*background-color: var(--color-brown-offwhite);*/
 }
 
 .section-write::before {
   background-color: var(--color-brand-darker);
+}
+
+.section-family {
+  /*background-image: linear-gradient(to bottom right, var(--color-brown-offwhite), #fff);*/
 }
 
 .section-family::before,
@@ -220,6 +228,10 @@ p {
     padding-right: 30px;
   }
 
+  .logo {
+    top: 1.5rem;
+  }
+
   .section-dev::before,
   .section-family::before {
     content: none;
@@ -243,6 +255,14 @@ p {
     width: 240px;
 
     transform: translateY(-50%);
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  .logo {
+    top: 1.8rem;
   }
 
 }
